--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,27 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+  
+  neo4j:
+    image: neo4j:latest
+    container_name: quanda_neo4j
+    environment:
+      NEO4J_AUTH: "neo4j/Phamquan2004@"
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    volumes:
+      - neo4j_data:/data
+      
+  redis:
+    image: redis:latest
+    container_name: quanda_redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
 
 volumes:
   db_data:
+  neo4j_data:
+  redis_data:
