--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "neo4j-driver": "^5.22.0",
     "pg": "^8.12.0",
+    "redis": "^4.6.15",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
