--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  minio:
+    image: minio/minio
+    container_name: quanda_minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_BROWSER: "on"
+    ports:
+      - "9000:9000"
+    volumes:
+      - minio_data:/data
+    command: server /data
+    expose:
+      - 9000
   postgres:
     image: postgres:latest
     container_name: postgres
@@ -36,3 +50,4 @@ volumes:
   db_data:
   neo4j_data:
   redis_data:
+  minio_data:
