--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "neo4j-driver": "^5.22.0",
+    "minio": "^8.0.1",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
+    "neo4j-driver": "^5.22.0",
     "pg": "^8.12.0",
     "redis": "^4.6.15",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
